# sdl_service

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
include/sdl_service/: sdl_service.h
src/: interface.cpp  sdl_service.cpp
